# AttrLinker

./: LICENSE  README.md  setup.cfg
attrLinker/: __init__.py  attrLinker.py  decorator.py  exceptions.py  linkMethod.py  manager.py  preparedLink.py  presets.py  propBinder.py  utils.py
tests/: simple_implementation.py  test.py  test_decorator.py  test_presets.py
