[metadata]
name = AttrLinker
version = 0.0.4
author = Vin-Ren
author_email = reaxumrx@gmail.com
description = A package for assisting linking attributes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vin-Ren/AttrLinker
project_urls =
    Bug Tracker = https://github.com/Vin-Ren/AttrLinker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = attrLinker
python_requires = >=3.6
